--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.18.9",
     "@expo-google-fonts/poppins": "^0.2.2",
     "@hookform/resolvers": "^2.8.10",
     "@react-native-async-storage/async-storage": "~1.17.3",
@@ -29,13 +31,14 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.31.1",
+    "react-is": "^18.2.0",
     "react-native": "0.68.2",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
-    "react-native-svg": "^12.3.0",
+    "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "0.17.7",
@@ -45,11 +48,20 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@testing-library/jest-native": "^4.0.5",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/react-native": "^10.1.1",
+    "@types/jest": "^28.1.6",
     "@types/react": "^17.0.13",
     "@types/react-native": "^0.64.10",
     "@types/react-native-vector-icons": "^6.4.7",
     "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components-react-native": "^5.1.3",
+    "jest": "27.0.0",
+    "jest-expo": "^45.0.1",
+    "jest-fetch-mock": "^3.0.3",
+    "jest-styled-components": "^7.0.8",
+    "ts-jest": "27.0.0",
     "typescript": "^4.3.5"
   },
   "private": true
